[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameScene.gd" type="Script" id=1]
[ext_resource path="res://assets/Kings and Pigs/Sprites/02-King Pig/Ground (38x28).png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="CircleShape2D" id=1]
radius = 11.8322

[sub_resource type="CircleShape2D" id=3]

[node name="GameScene" type="Node2D"]
position = Vector2( 80, 128 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 96, 0 )
shape = SubResource( 2 )
one_way_collision = true

[node name="Polygon2D" type="Polygon2D" parent="Area2D"]
color = Color( 0.34902, 0.34902, 0.34902, 1 )
polygon = PoolVector2Array( 48, -16, 80, -48, 112, -48, 144, -16, 144, 16, 112, 48, 80, 48, 48, 16, 48, -16 )

[node name="KingPig" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KingPig"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KingPig"]
position = Vector2( -0.930534, -3.72217 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KingPig"]
current = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 48, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
position = Vector2( 0.214958, 0.214973 )
scale = Vector2( 0.690978, 0.690978 )
polygon = PoolVector2Array( -16, 0, 0, -16, 16, 0, 0, 16, -16, 0 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
